# Implementing-the-rust-borrow-checker-in-CPP-Dissertation

./: .gitignore  README.md
code/: README.md
code/cpp/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  borrow_checker.hpp  borrow_checker_tests.cpp  main.cpp  test.cpp
code/cpp/html/: annotated.html  borrow__checker_8hpp.html  borrow__checker_8hpp_source.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_enum.html  index.html  structS-members.html  structS.html
code/cpp/html/search/: all_0.js  all_1.js  all_2.js  enums_0.js  functions_0.js  searchdata.js
code/cpp/latex/: annotated.tex  borrow__checker_8hpp.tex  borrow__checker_8hpp_source.tex  files.tex  refman.tex  structS.tex
code/rust/borrow_checker/: Cargo.toml
code/rust/borrow_checker/src/: lib.rs
code/rust/borrow_checker/src/uncompilables/: datarace.rs  multiple_mut_refs.rs  ref_to_local_vars.rs
code/rust/src/: lib.rs
code/rust/src/uncompilables/: different_ref_types.rs
documents/dissertation/: dissertation.bib  dissertation.tex  statement_of_originality.odt
documents/literature_review/: literature_review.bib  literature_review.tex
documents/meeting_notes/: meeting_notes_01_11_21  meeting_notes_08_11_21  meeting_notes_15_11_21  meeting_notes_22_11_21  meeting_notes_29_11_21
documents/proposal/: proposal.bib  proposal.tex
